# com_portfolio

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Makefile  gunicorn.conf.py  pyproject.toml  setup.cfg
com_portfolio/: context_vars.py  log.py  test_utils.py
com_portfolio/application/: __init__.py  app.py  identity_provider.py
com_portfolio/domain/: __init__.py  entities.py  exceptions.py  repositories.py  schemas.py  services.py
com_portfolio/infrastructure/: __init__.py  identity_provider.py  identity_providers.py  repositories.py
com_portfolio/presentation/: request_id.py
com_portfolio/presentation/api/: __init__.py  exceptions.py  factories.py  helpers.py  main.py  middlewares.py  responses.py  views.py
docs/: postman_collection.json
examples/: .env.example  docker-compose.yml
examples/data/: categories.txt  references.csv
tests/: conftest.py  test_tmp.py
tests/infrastructure/: test_repositories.py
tests/presentation/api/: test_views.py
